Add admin alert list and detail swagger endpoints
